# yolov11-pytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: coco.yaml  default.yaml
data/: detections.json
scripts/: batch_transfer_weights.py  download_weights.py  inference.py  test_models.py  train.py  transfer_weights.py  visual_comparison.py
tests/: __init__.py  test_models.py
yolo/: __init__.py
yolo/data/: __init__.py  augmentations.py  dataset.py
yolo/models/: __init__.py  backbone.py  common.py  neck.py  yolo.py
yolo/models/heads/: __init__.py  detect.py  pose.py  segment.py
yolo/utils/: __init__.py  boxes.py  loss.py  metrics.py  training.py
